--- a/src/input.css
+++ b/src/input.css
@@ -3,6 +3,15 @@
 @tailwind utilities;
 
 
+#boxGeneral{
+    width: 45%;
+    height: 425px;
+}
+
+#inputCity{
+    width: 100%;
+}
+
 .preLocation {
     display: flex;
     flex-wrap: wrap;
@@ -17,7 +26,7 @@
     border: 2px solid white;
     padding: 5px 0;
     border-radius: 0.75rem;
-    margin: 0.75rem 23px; 
+    margin: 0.75rem 0; 
     cursor: pointer;
     transition: background-color 0.3s;
 }
